# File-Upload-Service

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20251223111449_create_tables.sql
src/: config.rs  database.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs  utils.rs
src/storage/: local.rs  mod.rs  s3.rs
