[package]
name = "fileuploadservice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "tokio", "json", "form", "http1", "macros"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.0"
futures = "0.3"
multer = "3.0"
tempfile = "3.0"
bytes = "1.0"
thiserror = "2.0.0"
validator = { version = "0.20.0", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
once_cell = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-types = "1.3.11"
sha2 = "0.10.9"
anyhow = "1.0.100"
